7/16/10 #2236, delete old dipole magnet model (DipoleMagnet)
7/16/10 #2236, simplify and rename magnet interface
7/16/10 #2236, remove B-field scaling from model
7/16/10 #2236, "distance exponent" from magnet interfaces (not needed for bar magnet, set to 3 for coil magnet)
7/16/10 #2236, remove "inside/outside plane of magnet" fix that is no longer needed (see #424)
7/16/10 #2236, make Turbine extend BarMagnet
7/16/10 #2236, refactor duplicate code into base class for handling magnet translation and rotation
# 2.03.04 (42283) Jul 14, 2010
7/14/10 see #2236, dev version to discuss progress on grid-file model for bar magnet
7/14/10 #2236, add interpolation to grid-file model for bar magnet
7/14/10 #2236, first pass at grid-file model for bar magnet
7/14/10 #2236, remove developer controls related to dipole magnet model, since we're replacing it
# 2.03.03 (42186) Jul 12, 2010
7/12/10 dev version before starting major changes on dipole model
7/12/10 #2236, cleanup DiploleMagnet before I start major changes: remove dead code, fix comments to reflect reality 
7/7/10 test app for Mike Dubson's new numerical dipole model
# 2.03.02 (39630) Apr 5, 2010
4/5/10 dev version for Mike Dubson to test
4/5/10 #2236, add developer control for "B-field inside/outside transition factor"
# 2.03.01 (39591) Apr 1, 2010
4/1/10 dev version for Mike Dubson to test his fix for #2236
4/1/10 #2236, use new b-field inside algorithm for dipole magnet, adjust FUDGE_FACTOR using test app
4/1/10 #2236, implement new algorithms for b-field inside dipole magnet, but continue to use old algorithm
# 2.03.00 (37994) Jan 9, 2010
1/9/10 public version for milestone "full redeploy, 2010 Q1"
# 2.02.01 (37349) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 2.02.00 (30610) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30609
# 2.01.08 (29968) Mar 27, 2009
3/27/09 #1526, incorporate Romanian sim translation
# 2.01.07 (29916) Mar 26, 2009